--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,7 +3,7 @@ name: Fetch latest blog posts and update README.md
 on:
     push:
     schedule:
-        - cron: "2/0 * * * *"
+        - cron: "* * * * *"
 
 jobs:
     build:
