Turn cron job into nightly action

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,7 +3,7 @@ name: Fetch latest blog posts and update README.md
 on:
   push:
   schedule:
-    - cron: "0 */1 * * *"
+    - cron: "0 0 * * *"
 
 jobs:
   build:
