--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,6 +4,9 @@ on:
   push:
   schedule:
     - cron: "0 0 * * *"
+  concurrency: 
+    group: ${{ github.head_ref }}
+    cancel-in-progress: true
 
 jobs:
   build:
