--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,8 +2,7 @@ name: Fetch latest blog posts and update README.md
 concurrency: 
   group: ${{ github.head_ref }}
   cancel-in-progress: true
-on:
-  push:
+on: pull_request
   schedule:
     - cron: "0 0 * * *"
 
